--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
+    "@fancyapps/ui": "^4.0.1",
     "normalize.css": "^8.0.1",
     "swiper": "^6.8.1"
   }
