--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@babel/polyfill": "^7.12.1",
     "@fancyapps/ui": "^4.0.1",
     "normalize.css": "^8.0.1",
+    "nouislider": "^15.4.0",
     "swiper": "^6.8.1"
   }
 }
